Adds functionality that let's to add new variant to the question and append question to the main form

--- a/assets/sass/_newform.scss
+++ b/assets/sass/_newform.scss
@@ -53,9 +53,9 @@ a:hover {
         }
       }
 
-      .firstquestion {
+      .question {
         padding: 5px 150px 5px 10px;
-        color: #443A3A;
+        color: #443a3a;
         font-size: 16px;
         margin-right: 5px;
 
@@ -68,7 +68,7 @@ a:hover {
 
       input:focus {
         outline: none;
-        color: #8D8D8D;
+        color: #8d8d8d;
       }
 
       select {
@@ -127,7 +127,7 @@ a:hover {
   }
 
   .bagla {
-    background-color: #F0F3F5;
+    background-color: #f0f3f5;
   }
 
   .bagla .btn-outline-primary:hover {
