--- a/assets/sass/_newform.scss
+++ b/assets/sass/_newform.scss
@@ -92,12 +92,6 @@ a:hover {
         padding: 30px 10px;
         color: #8d8d8d;
         font-size: 15px;
-
-        .digertype {
-          border: none;
-          border-bottom: 1px solid #8d8d8d;
-          background: none;
-        }
       }
 
       .opensection span {
@@ -126,16 +120,16 @@ a:hover {
     }
   }
 
-  .bagla {
+  .close {
     background-color: #f0f3f5;
   }
 
-  .bagla .btn-outline-primary:hover {
+  .close .btn-outline-primary:hover {
     color: white !important;
   }
 
   .btn {
-    transition: all 1s ease-in-out !important;
+    transition: all 0.3s ease-in-out !important;
     margin-right: 10px;
   }
 }
@@ -160,4 +154,9 @@ a:hover {
 
 #other:hover {
   text-decoration: none;
+}
+.othertype {
+  border: none;
+  border-bottom: 1px solid #8d8d8d;
+  background: none;
 }
