--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,5 +7,5 @@
 @import "profile";
 @import "newform";
 @import "allqueries";
-@import "redakteEt";
-@import "tamamla";
+@import "edit";
+@import "complete";
