--- a/assets/sass/_newform.scss
+++ b/assets/sass/_newform.scss
@@ -33,23 +33,14 @@ a:hover {
 
       .title {
         font-size: 20px;
-
-        input {
-          border: none;
-          background: none;
-          border-bottom: 1px solid #c9c7c7;
-        }
       }
 
       .description {
-        border-bottom: 1px solid #c9c7c7;
         text-indent: 5px;
         margin-bottom: 70px;
 
         input {
           width: 100%;
-          border: none;
-          background: none;
         }
       }
 
@@ -57,13 +48,7 @@ a:hover {
         padding: 5px 150px 5px 10px;
         color: #443a3a;
         font-size: 16px;
-        margin-right: 5px;
-
-        input {
-          border: none;
-          background: none;
-          border-bottom: 1px solid #c9c7c7;
-        }
+        margin-left: 0;
       }
 
       input:focus {
@@ -104,7 +89,6 @@ a:hover {
 
       .text {
         border: none;
-        background: none;
         color: #443a3a;
       }
     }
@@ -139,9 +123,6 @@ a:hover {
 }
 
 .addOtherClass {
-  border: none;
-  background: none;
-  border-bottom: 1px solid #8d8d8d;
   margin-left: 5px;
 }
 .newLabelClass {
@@ -155,8 +136,8 @@ a:hover {
 #other:hover {
   text-decoration: none;
 }
-.othertype {
+input {
   border: none;
-  border-bottom: 1px solid #8d8d8d;
   background: none;
+  border-bottom: 1px solid #c9c7c7;
 }
