Revert "New branch"

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,5 +7,5 @@
 @import "profile";
 @import "newform";
 @import "allqueries";
-@import "edit";
-@import "complete";
+@import "redakteEt";
+@import "tamamla";
