--- a/assets/sass/_newform.scss
+++ b/assets/sass/_newform.scss
@@ -33,14 +33,23 @@ a:hover {
 
       .title {
         font-size: 20px;
+
+        input {
+          border: none;
+          background: none;
+          border-bottom: 1px solid #c9c7c7;
+        }
       }
 
       .description {
+        border-bottom: 1px solid #c9c7c7;
         text-indent: 5px;
         margin-bottom: 70px;
 
         input {
           width: 100%;
+          border: none;
+          background: none;
         }
       }
 
@@ -48,7 +57,13 @@ a:hover {
         padding: 5px 150px 5px 10px;
         color: #443a3a;
         font-size: 16px;
-        margin-left: 0;
+        margin-right: 5px;
+
+        input {
+          border: none;
+          background: none;
+          border-bottom: 1px solid #c9c7c7;
+        }
       }
 
       input:focus {
@@ -95,6 +110,7 @@ a:hover {
 
       .text {
         border: none;
+        background: none;
         color: #443a3a;
       }
     }
@@ -129,6 +145,9 @@ a:hover {
 }
 
 .addOtherClass {
+  border: none;
+  background: none;
+  border-bottom: 1px solid #8d8d8d;
   margin-left: 5px;
 }
 .newLabelClass {
@@ -142,11 +161,3 @@ a:hover {
 #other:hover {
   text-decoration: none;
 }
-<<<<<<< HEAD
-=======
-input {
-  border: none;
-  background: none;
-  border-bottom: 1px solid #c9c7c7;
-}
->>>>>>> de2da011765b2eb93e678f78dbce382901ca0e96
