--- a/assets/sass/_mainPage.scss
+++ b/assets/sass/_mainPage.scss
@@ -15,17 +15,15 @@
 
     .card-small {
       @include shadow-box;
-
       .card-icon {
         width: 80px;
         height: 80px;
         background-color: rgba($color: #007bff, $alpha: 0.04);
         border-radius: 50%;
-        img {
-          max-width: 40px;
-          max-height: 40px;
-          width: auto;
-          height: auto;
+        i {
+        color: #3E64FF;
+        font-size: 30px;
+   
         }
       }
 
