--- a/assets/sass/_newform.scss
+++ b/assets/sass/_newform.scss
@@ -3,13 +3,15 @@
 body {
   background-color: #f0f3f5;
 }
-
+button {
+  transition: all 0.3s ease-in-out !important;
+}
 a:hover {
   text-decoration: none !important;
 }
 
 .newform {
-  width: 85%;
+  width: 90%;
   margin: 0 auto;
 
   .form_container {
@@ -36,7 +38,6 @@ a:hover {
       }
 
       .description {
-        text-indent: 5px;
         margin-bottom: 70px;
 
         input {
@@ -48,7 +49,7 @@ a:hover {
         padding: 5px 150px 5px 10px;
         color: #443a3a;
         font-size: 16px;
-        margin-left: 0;
+        margin-left: 0 !important;
       }
 
       input:focus {
@@ -88,8 +89,8 @@ a:hover {
       }
 
       .text {
-        color: #443a3a;
         border: none;
+        color: #443a3a;
       }
     }
 
@@ -113,7 +114,6 @@ a:hover {
   }
 
   .btn {
-    transition: all 0.3s ease-in-out !important;
     margin-right: 10px;
   }
 }
@@ -123,6 +123,9 @@ a:hover {
 }
 
 .addOtherClass {
+  border: none;
+  background: none;
+  border-bottom: 1px solid #8d8d8d;
   margin-left: 5px;
 }
 .newLabelClass {
