--- a/assets/sass/_media.scss
+++ b/assets/sass/_media.scss
@@ -21,36 +21,8 @@
     }
   }
 }
-
-@media only screen and (min-width:577px) and (max-width:768px) {
-  #content {
-    width: 90%;
-  }
-
-  #sidebar {
-    min-width: 10%;
-    max-width: 10%;
-  }
-
-  .profile {
-    .profile_form {
-      padding: 40px 0;
-
-      form div {
-        width: 100%;
-      }
-    }
-  }
-}
-
-@media only screen and (min-width:769px) and (max-width:1024px) {
-  .profile {
-    .profile_form {
-      padding: 40px 0;
-
-      form div {
-        width: 100%;
-      }
-    }
+@media only screen and (max-width:768px){
+  .new-user {
+    margin-top: 40px !important;
   }
 }
