--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -17,12 +17,18 @@ $bg-color: #f0f3f5;
   padding: 0;
   border: 0;
 
+
   caption {
     caption-side: top;
-
+font-size: 34px;
+    display: table-caption;
+ a{
+   float: right;
+   margin: 10px;
+ }
+  
     a {
-      position: absolute;
-      right: 15px !important;
+    
       padding: 5px 25px;
     }
 
