--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -741,6 +741,9 @@ a[data-toggle="collapse"] {
 }
 
 @media (max-width: 580px) {
+  .profile {
+    flex-direction: column;
+  }
   .card {
     width: 80%;
   }
