--- a/assets/sass/_profile.scss
+++ b/assets/sass/_profile.scss
@@ -38,9 +38,7 @@ text-align: center;
       margin-bottom: 15px;
     }
   }
-
 }
-
 
 .profile {
   width: 100%;
@@ -48,7 +46,6 @@ text-align: center;
   display: flex;
   align-items: center;
   justify-content: space-around;
-
   flex-wrap: wrap;
 
 }
@@ -57,6 +54,9 @@ text-align: center;
 @media (max-width: 580px)
 {
 
+  .profile{
+    flex-direction: column;
+  }
   .card{
    width: 80%;
   }
