--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -58,36 +58,16 @@ body {
 }
 
 .wrapper {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   display: flex;
   width: 100%;
 }
 
 #content {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 78%;
-  min-height: 100vh;
-  -webkit-transition: all 0.3s;
-=======
   display: flex;
   align-items: center;
   justify-content: center;
   width: 78%;
   min-height: 100vh;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   transition: all 0.3s;
   position: absolute;
   right: 0px;
@@ -112,11 +92,6 @@ body {
 }
 
 .mobileMenu {
-<<<<<<< HEAD
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   display: flex !important;
 }
 
@@ -135,12 +110,7 @@ body {
 }
 
 .login .card {
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
   background-color: white;
 }
@@ -171,12 +141,7 @@ body {
 .table {
   color: #443a3a;
   border-radius: 5px;
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
   padding: 0;
   border: 0;
@@ -189,16 +154,11 @@ body {
 }
 
 .table caption a {
-<<<<<<< HEAD
-  position: absolute;
-  right: 15px !important;
-=======
   float: right;
   margin: 10px;
 }
 
 .table caption a {
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   padding: 5px 25px;
 }
 
@@ -238,36 +198,16 @@ body {
 }
 
 .wrapper {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   display: flex;
   width: 100%;
 }
 
 #content {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 78%;
-  min-height: 100vh;
-  -webkit-transition: all 0.3s;
-=======
   display: flex;
   align-items: center;
   justify-content: center;
   width: 78%;
   min-height: 100vh;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   transition: all 0.3s;
   position: absolute;
   right: 0px;
@@ -292,11 +232,6 @@ body {
 }
 
 .mobileMenu {
-<<<<<<< HEAD
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   display: flex !important;
 }
 
@@ -328,21 +263,9 @@ body {
 }
 
 #sidebar {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-=======
   display: flex;
   justify-content: space-around;
   flex-direction: column;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   width: 22%;
   position: fixed;
   top: 0;
@@ -350,12 +273,7 @@ body {
   height: 100vh;
   z-index: 999;
   background: white;
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
   transition: all 0.3s;
   z-index: 200;
@@ -492,18 +410,6 @@ a[data-toggle="collapse"] {
     width: 100%;
     top: 43px;
     display: none;
-<<<<<<< HEAD
-  }
-  #sidebarCollapse {
-    display: none;
-  }
-  #sidebar ul li {
-    font-size: 22px;
-  }
-  #sidebar ul li > ul li {
-    font-size: 16px;
-  }
-=======
   }
   #sidebarCollapse {
     display: none;
@@ -517,7 +423,6 @@ a[data-toggle="collapse"] {
   section {
     margin-top: 43px;
   }
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
 }
 
 .new-user {
@@ -526,12 +431,7 @@ a[data-toggle="collapse"] {
 
 .new-user .card {
   background-color: #f9f9f9;
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
 }
 
@@ -546,12 +446,7 @@ a[data-toggle="collapse"] {
 }
 
 .card-big {
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
   margin: 15px 10px;
   background-color: #f9f9f9;
@@ -564,12 +459,7 @@ a[data-toggle="collapse"] {
 }
 
 .card-big .card-content .card-small {
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
 }
 
@@ -648,21 +538,9 @@ a[data-toggle="collapse"] {
 }
 
 #sidebar {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-=======
   display: flex;
   justify-content: space-around;
   flex-direction: column;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   width: 22%;
   position: fixed;
   top: 0;
@@ -670,12 +548,7 @@ a[data-toggle="collapse"] {
   height: 100vh;
   z-index: 999;
   background: white;
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
   transition: all 0.3s;
   z-index: 200;
@@ -821,12 +694,9 @@ a[data-toggle="collapse"] {
   }
   #sidebar ul li > ul li {
     font-size: 16px;
-<<<<<<< HEAD
-=======
   }
   section {
     margin-top: 43px;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   }
 }
 
@@ -834,45 +704,6 @@ a[data-toggle="collapse"] {
   width: 100%;
   height: 100vh;
   display: flex;
-<<<<<<< HEAD
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  overflow-y: hidden;
-}
-
-.profile {
-  width: 100%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.profile .profile_form {
-  width: 90%;
-  height: auto;
-  overflow: hidden;
-  margin: 5% auto;
-  border-radius: 2px;
-  background-color: #f8f8f8;
-  -webkit-box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
-          box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
-  padding: 40px 90px;
-}
-
-.profile .profile_form .title {
-  width: 100%;
-  text-align: center;
-  padding-bottom: 15px;
-=======
   flex-direction: row;
   overflow-y: hidden;
 }
@@ -883,7 +714,6 @@ a[data-toggle="collapse"] {
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
   border: none;
   width: 40%;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
 }
 
 .profileSection .card .card-title h3 {
@@ -903,40 +733,18 @@ a[data-toggle="collapse"] {
 
 .profileSection .profile {
   width: 100%;
-<<<<<<< HEAD
-  text-align: center;
-  padding-top: 15px;
-}
-
-.profile .profile_form .save button {
-  background-color: transparent;
-  border: 1px solid #007bff;
-  color: #007bff;
-  border-radius: 3px;
-  padding: 3px 10px;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.profile .profile_form .save button:focus {
-  outline: none;
-=======
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
 }
 
 @media (max-width: 580px) {
-  .profile {
-    flex-direction: column;
-  }
-  .card {
+  .profileSection .card {
     width: 80%;
   }
-  h3 {
+  .profileSection h3 {
     font-size: 25px;
   }
 }
@@ -955,21 +763,9 @@ a[data-toggle="collapse"] {
 }
 
 #sidebar {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-=======
   display: flex;
   justify-content: space-around;
   flex-direction: column;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   width: 22%;
   position: fixed;
   top: 0;
@@ -977,12 +773,7 @@ a[data-toggle="collapse"] {
   height: 100vh;
   z-index: 999;
   background: white;
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
   transition: all 0.3s;
   z-index: 200;
@@ -1128,12 +919,9 @@ a[data-toggle="collapse"] {
   }
   #sidebar ul li > ul li {
     font-size: 16px;
-<<<<<<< HEAD
-=======
   }
   section {
     margin-top: 43px;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   }
 }
 
@@ -1142,10 +930,6 @@ body {
 }
 
 button {
-<<<<<<< HEAD
-  -webkit-transition: all 0.3s ease-in-out !important;
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   transition: all 0.3s ease-in-out !important;
 }
 
@@ -1162,12 +946,7 @@ a:hover {
   padding: 0 !important;
   background-color: #f8f8f8;
   border-radius: 5px;
-<<<<<<< HEAD
-  -webkit-box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
-          box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
-=======
   box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
 }
 
 .newform .form_container .formContent h3 {
@@ -1291,22 +1070,12 @@ input {
   border: none;
   background: none;
   border-bottom: 1px solid #c9c7c7;
-<<<<<<< HEAD
-}
-
-button {
-  -webkit-transition: all 0.3s ease-in-out !important;
-  transition: all 0.3s ease-in-out !important;
-}
-
-=======
 }
 
 button {
   transition: all 0.3s ease-in-out !important;
 }
 
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
 .users {
   padding-left: 0 !important;
 }
@@ -1360,21 +1129,9 @@ button {
 }
 
 #sidebar {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-=======
   display: flex;
   justify-content: space-around;
   flex-direction: column;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   width: 22%;
   position: fixed;
   top: 0;
@@ -1382,12 +1139,7 @@ button {
   height: 100vh;
   z-index: 999;
   background: white;
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
   transition: all 0.3s;
   z-index: 200;
@@ -1533,12 +1285,9 @@ a[data-toggle="collapse"] {
   }
   #sidebar ul li > ul li {
     font-size: 16px;
-<<<<<<< HEAD
-=======
   }
   section {
     margin-top: 43px;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   }
 }
 
@@ -1547,10 +1296,6 @@ body {
 }
 
 button {
-<<<<<<< HEAD
-  -webkit-transition: all 0.3s ease-in-out !important;
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   transition: all 0.3s ease-in-out !important;
 }
 
@@ -1567,12 +1312,7 @@ a:hover {
   padding: 0 !important;
   background-color: #f8f8f8;
   border-radius: 5px;
-<<<<<<< HEAD
-  -webkit-box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
-          box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
-=======
   box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
 }
 
 .newform .form_container .formContent h3 {
@@ -1712,21 +1452,9 @@ input {
 }
 
 #sidebar {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-=======
   display: flex;
   justify-content: space-around;
   flex-direction: column;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   width: 22%;
   position: fixed;
   top: 0;
@@ -1734,12 +1462,7 @@ input {
   height: 100vh;
   z-index: 999;
   background: white;
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
   transition: all 0.3s;
   z-index: 200;
@@ -1885,12 +1608,9 @@ a[data-toggle="collapse"] {
   }
   #sidebar ul li > ul li {
     font-size: 16px;
-<<<<<<< HEAD
-=======
   }
   section {
     margin-top: 43px;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   }
 }
 
@@ -1912,21 +1632,9 @@ a[data-toggle="collapse"] {
 }
 
 #sidebar {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-=======
   display: flex;
   justify-content: space-around;
   flex-direction: column;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   width: 22%;
   position: fixed;
   top: 0;
@@ -1934,12 +1642,7 @@ a[data-toggle="collapse"] {
   height: 100vh;
   z-index: 999;
   background: white;
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
   transition: all 0.3s;
   z-index: 200;
@@ -2085,12 +1788,9 @@ a[data-toggle="collapse"] {
   }
   #sidebar ul li > ul li {
     font-size: 16px;
-<<<<<<< HEAD
-=======
   }
   section {
     margin-top: 43px;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   }
 }
 
@@ -2099,10 +1799,6 @@ body {
 }
 
 button {
-<<<<<<< HEAD
-  -webkit-transition: all 0.3s ease-in-out !important;
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   transition: all 0.3s ease-in-out !important;
 }
 
@@ -2119,12 +1815,7 @@ a:hover {
   padding: 0 !important;
   background-color: #f8f8f8;
   border-radius: 5px;
-<<<<<<< HEAD
-  -webkit-box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
-          box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
-=======
   box-shadow: 5px 5px 10px rgba(2, 74, 152, 0.05);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
 }
 
 .newform .form_container .formContent h3 {
@@ -2264,21 +1955,9 @@ input {
 }
 
 #sidebar {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-=======
   display: flex;
   justify-content: space-around;
   flex-direction: column;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   width: 22%;
   position: fixed;
   top: 0;
@@ -2286,12 +1965,7 @@ input {
   height: 100vh;
   z-index: 999;
   background: white;
-<<<<<<< HEAD
-  -webkit-box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-          box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
-=======
   box-shadow: 3px 6px 10px rgba(2, 74, 152, 0.1);
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   border: none;
   transition: all 0.3s;
   z-index: 200;
@@ -2437,12 +2111,9 @@ a[data-toggle="collapse"] {
   }
   #sidebar ul li > ul li {
     font-size: 16px;
-<<<<<<< HEAD
-=======
   }
   section {
     margin-top: 43px;
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
   }
 }
 
@@ -2472,7 +2143,3 @@ a[data-toggle="collapse"] {
     margin-top: 40px !important;
   }
 }
-<<<<<<< HEAD
-/*# sourceMappingURL=style.css.map */
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
