--- a/assets/sass/_profile.scss
+++ b/assets/sass/_profile.scss
@@ -38,7 +38,6 @@ text-align: center;
       margin-bottom: 15px;
     }
   }
-
 }
 
 .profile {
@@ -47,7 +46,6 @@ text-align: center;
   display: flex;
   align-items: center;
   justify-content: space-around;
-
   flex-wrap: wrap;
 
 }
@@ -56,10 +54,12 @@ text-align: center;
 @media (max-width: 580px)
 {
 
+.profileSection{
   .card{
    width: 80%;
   }
   h3{
     font-size: 25px;
   }
+}
 }
